; ModuleID = '/home/carl/AnghaBench/numpy/numpy/core/src/multiarray/extr_methods.c_forward_ndarray_method.c'
source_filename = "/home/carl/AnghaBench/numpy/numpy/core/src/multiarray/extr_methods.c_forward_ndarray_method.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*, i32*, i32*, i32*)* @forward_ndarray_method to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @forward_ndarray_method(i32* %0, i32* %1, i32* %2, i32* %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32*, align 8
  store i32* %0, i32** %6, align 8
  store i32* %1, i32** %7, align 8
  store i32* %2, i32** %8, align 8
  store i32* %3, i32** %9, align 8
  %15 = load i32*, i32** %7, align 8
  %16 = call i32 @PyTuple_GET_SIZE(i32* %15)
  store i32 %16, i32* %13, align 4
  %17 = load i32, i32* %13, align 4
  %18 = add nsw i32 %17, 1
  %19 = call i32* @PyTuple_New(i32 %18)
  store i32* %19, i32** %10, align 8
  %20 = load i32*, i32** %10, align 8
  %21 = icmp eq i32* %20, null
  br i1 %21, label %22, label %23

22:                                               ; preds = %4
  store i32* null, i32** %5, align 8
  br label %55

23:                                               ; preds = %4
  %24 = load i32*, i32** %6, align 8
  %25 = call i32 @Py_INCREF(i32* %24)
  %26 = load i32*, i32** %10, align 8
  %27 = load i32*, i32** %6, align 8
  %28 = call i32 @PyTuple_SET_ITEM(i32* %26, i32 0, i32* %27)
  store i32 0, i32* %12, align 4
  br label %29

29:                                               ; preds = %44, %23
  %30 = load i32, i32* %12, align 4
  %31 = load i32, i32* %13, align 4
  %32 = icmp slt i32 %30, %31
  br i1 %32, label %33, label %47

33:                                               ; preds = %29
  %34 = load i32*, i32** %7, align 8
  %35 = load i32, i32* %12, align 4
  %36 = call i32* @PyTuple_GET_ITEM(i32* %34, i32 %35)
  store i32* %36, i32** %14, align 8
  %37 = load i32*, i32** %14, align 8
  %38 = call i32 @Py_INCREF(i32* %37)
  %39 = load i32*, i32** %10, align 8
  %40 = load i32, i32* %12, align 4
  %41 = add nsw i32 %40, 1
  %42 = load i32*, i32** %14, align 8
  %43 = call i32 @PyTuple_SET_ITEM(i32* %39, i32 %41, i32* %42)
  br label %44

44:                                               ; preds = %33
  %45 = load i32, i32* %12, align 4
  %46 = add nsw i32 %45, 1
  store i32 %46, i32* %12, align 4
  br label %29

47:                                               ; preds = %29
  %48 = load i32*, i32** %9, align 8
  %49 = load i32*, i32** %10, align 8
  %50 = load i32*, i32** %8, align 8
  %51 = call i32* @PyObject_Call(i32* %48, i32* %49, i32* %50)
  store i32* %51, i32** %11, align 8
  %52 = load i32*, i32** %10, align 8
  %53 = call i32 @Py_DECREF(i32* %52)
  %54 = load i32*, i32** %11, align 8
  store i32* %54, i32** %5, align 8
  br label %55

55:                                               ; preds = %47, %22
  %56 = load i32*, i32** %5, align 8
  ret i32* %56
}

declare dso_local i32 @PyTuple_GET_SIZE(i32*) #1

declare dso_local i32* @PyTuple_New(i32) #1

declare dso_local i32 @Py_INCREF(i32*) #1

declare dso_local i32 @PyTuple_SET_ITEM(i32*, i32, i32*) #1

declare dso_local i32* @PyTuple_GET_ITEM(i32*, i32) #1

declare dso_local i32* @PyObject_Call(i32*, i32*, i32*) #1

declare dso_local i32 @Py_DECREF(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
